# Open-Overlay

./: README.md  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  tauriApi.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  obs_server.rs
src/components/: ColorPicker.tsx  Designer.tsx  Titlebar.tsx
