[package]
name = "open-overlay"
version = "0.1.0"
description = "Open Overlay - OBS Browser Source Designer"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# Embedded HTTP server for OBS browser source
actix-web = { version = "4", features = ["macros"] }
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }

# Shared state
once_cell = "1"
